--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -17,8 +17,8 @@
 
 .footer__top {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr;
-  gap: 48px;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+  gap: 32px;
   margin-bottom: 60px;
 }
 
